add rolelistUC, AddRoleWindow

--- a/WeddingApp/WeddingApp/Views/AddEmployeeWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/AddEmployeeWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
-        Height="680"
+        Height="780"
         Width="440"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -86,7 +86,7 @@
                                         Height="30"
                                         Foreground="{StaticResource Gray}"
                                         VerticalAlignment="Top"
-                                        Margin="10,10,20,-18" />
+                                        Margin="10,20,20,0" />
                                 <TextBox
                                         x:Name="txtMail"
                                         TabIndex="0"
@@ -95,8 +95,6 @@
                                     Foreground="Black"
                                     FontSize="16"
                                     FontWeight="Medium"
-                                    materialDesign:HintAssist.Foreground="{StaticResource Gray}"
-                                    materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
                                     Width="250"
                                     VerticalContentAlignment="Center"
                                     Height="50"
@@ -116,18 +114,48 @@
                                 <TextBox
                                     x:Name="txtPhone"
                                     TabIndex="1"
-                                materialDesign:HintAssist.Hint="Mật khẩu"
-                                Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                Foreground="Black"
-                                FontSize="16"
-                                FontWeight="Medium"
-                                materialDesign:HintAssist.Foreground="{StaticResource Gray}"
-                                materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
-                                Width="250"
-                                VerticalContentAlignment="Center"
-                                Height="50"
-                                Padding="2,0,0,0">
+                                    materialDesign:HintAssist.Hint="Mật khẩu"
+                                    Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                    Foreground="Black"
+                                    FontSize="16"
+                                    FontWeight="Medium"
+                                    Width="250"
+                                    VerticalContentAlignment="Center"
+                                    Height="50"
+                                    Padding="2,0,0,0">
                                 </TextBox>
+                            </StackPanel>
+                            <!-- chức vụ -->
+                            <StackPanel Orientation="Horizontal" Margin="0 20">
+                                <materialDesign:PackIcon
+                                    Kind="Money"
+                                    Width="30"
+                                    Height="30"
+                                    Foreground="{StaticResource Gray}"
+                                    VerticalAlignment="Center"
+                                    Margin="10,10,20,-18" />
+                                <ComboBox
+                                    x:Name="comboBoxRoleList"
+                                    materialDesign:HintAssist.Hint="Chức vụ"
+                                    Foreground="Black"
+                                    FontSize="16"
+                                    FontWeight="Medium"
+                                    Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                                    materialDesign:HintAssist.Foreground="Black"
+                                    materialDesign:TextFieldAssist.UnderlineBrush="Black"
+                                    Width="150"
+                                    VerticalContentAlignment="Center"
+                                    Height="50"
+                                    IsEnabled="False"
+                                    Padding="2,8,0,0"
+                                    ItemsSource="{Binding}">
+                                    <ComboBox.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <VirtualizingStackPanel />
+                                        </ItemsPanelTemplate>
+                                    </ComboBox.ItemsPanel>
+                                </ComboBox>
+
                             </StackPanel>
                             <!--địa chỉ-->
                             <StackPanel Orientation="Horizontal" Margin="0 20">
