--- a/WeddingApp/WeddingApp/Views/EditRoleWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/EditRoleWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WeddingApp.Views.AddRoleWindow"
+﻿<Window x:Class="WeddingApp.Views.EditRoleWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
-        Title="AddRoleWindow" Height="600" Width="800"
+        Title="EditRoleWindow" Height="600" Width="800"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -20,7 +20,6 @@
         AllowsTransparency="True"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen">
-
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
             <Grid>
@@ -30,9 +29,9 @@
                     <RowDefinition/>
                     <RowDefinition Height="100"/>
                 </Grid.RowDefinitions>
-                
+
                 <uc:ControlBarUC Margin="10" Grid.Row="0"/>
-                
+
                 <TextBlock
                     Grid.Row="1"
                     x:Name="titleTxt"
@@ -69,7 +68,7 @@
                             VerticalAlignment="Center"
                             Margin="10 0 0 0"/>
                     </StackPanel>
-                    
+
                     <!--Content-->
                     <Border
                         Background="Transparent"
@@ -158,7 +157,7 @@
                         Margin="10 0 0 30"/>
                     <Button
                         Style="{StaticResource GreenBtn}"
-                        Content="Thêm"
+                        Content="Lưu"
                         FontSize="18"
                         Width="100"
                         Height="35"
@@ -166,7 +165,7 @@
                         Margin="350 0 0 20"/>
                 </StackPanel>
             </Grid>
-            
+
             <Rectangle
             Fill="White"
             HorizontalAlignment="Stretch"
