add viewmodel: AddRole, EditRole, RoleList

--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -15,4 +15,7 @@
     <viewmodels:EditHallTypeVM x:Key="editHallTypeVM"></viewmodels:EditHallTypeVM>
     <viewmodels:InvoiceVM x:Key="invoiceVM"></viewmodels:InvoiceVM>
     <viewmodels:SetWeddingInfoVM x:Key="setWeddingInfoVM"></viewmodels:SetWeddingInfoVM>
+    <viewmodels:AddRoleVM x:Key="addRoleVM"></viewmodels:AddRoleVM>
+    <viewmodels:EditRoleVM x:Key="editRoleVM"></viewmodels:EditRoleVM>
+    <viewmodels:RoleListVM x:Key="roleListVM"></viewmodels:RoleListVM>
 </ResourceDictionary>
