--- a/WeddingApp/WeddingApp/Views/EditRoleWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/EditRoleWindow.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Class="WeddingApp.Views.EditRoleWindow"
+        x:Name="EditRoleWD"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeddingApp.Views"
         mc:Ignorable="d"
+        DataContext="{StaticResource editRoleVM}"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
@@ -20,6 +22,12 @@
         AllowsTransparency="True"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                   CommandParameter="{Binding ElementName=EditRoleWD}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
             <Grid>
@@ -35,7 +43,7 @@
                 <TextBlock
                     Grid.Row="1"
                     x:Name="titleTxt"
-                    Text="Thêm chức vụ"
+                    Text="Chỉnh sửa chức vụ"
                     FontSize="30"
                     FontWeight="Bold"
                     Foreground="{StaticResource Orange2}"
@@ -91,39 +99,45 @@
                         Margin="100 10 100 0"
                         x:Name="functionList"
                         ScrollViewer.CanContentScroll="False"
-                        ScrollViewer.HorizontalScrollBarVisibility="Hidden">
-                        <ListViewItem>
-                            <Grid Height="60" Width="590">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="50"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <CheckBox
-                                    Width="20"
-                                    Height="20"
-                                    Grid.Column="0"
-                                    Background="{StaticResource Orange2}"
-                                    HorizontalAlignment="Center">
-                                </CheckBox>
-                                <TextBlock
-                                    x:Name="functionName"
-                                    Grid.Column="1"
-                                    Text="ten dai vai lonten dai vai lonten dai vai lonten dai vai lonten dai vai lon"
-                                    TextWrapping="Wrap"
-                                    FontSize="17"
-                                    FontWeight="Medium"
-                                    Foreground="DimGray"
-                                    VerticalAlignment="Center"
-                                    Margin="10 0 20 0"/>
-                                <Rectangle
-                                    Grid.ColumnSpan="2"
-                                    Width="auto"
-                                    Height="1"
-                                    VerticalAlignment="Bottom"
-                                    Fill="LightGray"
-                                    Margin="15 10 20 0"/>
-                            </Grid>
-                        </ListViewItem>
+                        ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                        ItemsSource="{Binding Functions, UpdateSourceTrigger=PropertyChanged}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Height="60" Width="590">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="50"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <CheckBox
+                                        x:Name="selectCheckBox"
+                                        Width="20"
+                                        Height="20"
+                                        Grid.Column="0"
+                                        Background="{StaticResource Orange2}"
+                                        HorizontalAlignment="Center"
+                                        Command="{Binding Source={StaticResource editRoleVM}, Path=CheckedCommand}"
+                                        CommandParameter="{Binding ElementName=selectCheckBox}"/>
+
+                                    <TextBlock
+                                        x:Name="functionName"
+                                        Grid.Column="1"
+                                        Text="{Binding FUNCTIONNAME}"
+                                        TextWrapping="Wrap"
+                                        FontSize="17"
+                                        FontWeight="Medium"
+                                        Foreground="DimGray"
+                                        VerticalAlignment="Center"
+                                        Margin="10 0 20 0"/>
+                                    <Rectangle
+                                        Grid.ColumnSpan="2"
+                                        Width="auto"
+                                        Height="1"
+                                        VerticalAlignment="Bottom"
+                                        Fill="LightGray"
+                                        Margin="15 10 20 0"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
                         <ListView.ItemContainerStyle>
                             <Style TargetType="{x:Type ListViewItem}">
                                 <Setter Property="Background" Value="Transparent" />
@@ -147,7 +161,9 @@
                         Grid.Column="0"
                         Background="{StaticResource Orange2}"
                         HorizontalAlignment="Center"
-                        Margin="20 0 0 30"/>
+                        Margin="20 0 0 30"
+                        Command="{Binding AllCheckedCommand}"
+                        CommandParameter="{Binding ElementName=EditRoleWD}"/>
                     <TextBlock
                         Text="Chọn tất cả"
                         FontSize="16"
