--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/RoleListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/RoleListUC.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="WeddingApp.Views.UserControls.Admin.RoleListUC"
+             x:Name="roleListUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +7,15 @@
              xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             DataContext="{StaticResource roleListVM}"
              d:DesignHeight="710" d:DesignWidth="1120">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                   CommandParameter="{Binding ElementName=roleListUC}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -57,63 +65,66 @@
                 Grid.Row="1" 
                 Grid.ColumnSpan="3"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                x:Name="roleList">
-                <ListViewItem>
-                    <Grid MinHeight="110" Width="1110">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="0.8*"></ColumnDefinition>
-                                <ColumnDefinition Width="2*"></ColumnDefinition>
-                                <ColumnDefinition Width="1*"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <!--role id-->
-                            <TextBlock
-                                Grid.Column="0"
-                                Margin="0 15 0 10"
-                                Text="213"
-                                FontSize="30"
-                                VerticalAlignment="Center"
-                                HorizontalAlignment="Center"
-                                Foreground="Black" />
-                            <!--role name-->
-                            <TextBlock
-                                Grid.Column="1"
-                                Margin="10 5"
-                                Foreground="Black"
-                                FontSize="30"
-                                Text="Quản lí nhân viên các thứ"
-                                TextWrapping="Wrap"
-                                VerticalAlignment="Center"
-                                HorizontalAlignment="Center">
-                            </TextBlock>
-                            <!--button xoá sửa-->
-                            <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Center">
-                                <Button
-                                    Margin="20 0"
-                                    Style="{StaticResource forgotPasswordBtn}"
-                                    ToolTip="Chỉnh sửa chức năng"
-                                    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
-                                    <materialDesign:PackIcon Kind="Edit" Height="40" Width="40"/>
-                                </Button>
-                                <Button
-                                    Style="{StaticResource forgotPasswordBtn}"
-                                    ToolTip="Xoá chức năng"
-                                    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
-                                    <materialDesign:PackIcon Kind="Delete" Height="40" Width="40"/>
-                                </Button>
-                            </StackPanel>
+                x:Name="roleList"
+                ItemsSource="{Binding Roles, UpdateSourceTrigger=PropertyChanged}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid MinHeight="110" Width="1110">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                                    <ColumnDefinition Width="2*"></ColumnDefinition>
+                                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <!--role id-->
+                                <TextBlock
+                                    Grid.Column="0"
+                                    Margin="0 15 0 10"
+                                    Text="{Binding ROLEID}"
+                                    FontSize="30"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"
+                                    Foreground="Black" />
+                                <!--role name-->
+                                <TextBlock
+                                    Grid.Column="1"
+                                    Margin="10 5"
+                                    Foreground="Black"
+                                    FontSize="30"
+                                    Text="{Binding ROLENAME}"
+                                    TextWrapping="Wrap"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center">
+                                </TextBlock>
+                                <!--button xoá sửa-->
+                                <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Center">
+                                    <Button
+                                        Margin="20 0"
+                                        Style="{StaticResource forgotPasswordBtn}"
+                                        ToolTip="Chỉnh sửa chức năng"
+                                        IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
+                                        <materialDesign:PackIcon Kind="Edit" Height="40" Width="40"/>
+                                    </Button>
+                                    <Button
+                                        Style="{StaticResource forgotPasswordBtn}"
+                                        ToolTip="Xoá chức năng"
+                                        IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
+                                        <materialDesign:PackIcon Kind="Delete" Height="40" Width="40"/>
+                                    </Button>
+                                </StackPanel>
+                            </Grid>
+                            <Rectangle
+                                Fill="White"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                RadiusY="10"
+                                RadiusX="10"
+                                Panel.ZIndex="-2"
+                                Margin="10"/>
+
                         </Grid>
-                        <Rectangle
-                            Fill="White"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            RadiusY="10"
-                            RadiusX="10"
-                            Panel.ZIndex="-2"
-                            Margin="10">
-                        </Rectangle>
-                    </Grid>
-                </ListViewItem>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Setter Property="Background" Value="Transparent" />
