--- a/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
@@ -4,7 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeddingApp.Views"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+        xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
         mc:Ignorable="d"
         Title="WeddingDetailWindow"
         Height="750" Width="800"
@@ -17,7 +19,9 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         AllowsTransparency="True"
         WindowStyle="None"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        x:Name="weddingDetailWD"
+        DataContext="{StaticResource weddingDetailVM}">
 
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=SlideInFromRight,Duration=0:0:0.5}">
         <Grid x:Name="print">
@@ -113,9 +117,11 @@
                                     CornerRadius="5"
                                     Effect="{StaticResource dropShadow1}">
                                 <ListView
+                                    x:Name="listViewTab"
                                     ScrollViewer.VerticalScrollBarVisibility="Disabled"
                                     ScrollViewer.CanContentScroll="False"
-                                    SelectedIndex="0">
+                                    SelectedIndex="0"
+                                    >
                                     <ListView.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <StackPanel Orientation="Horizontal"></StackPanel>
@@ -123,7 +129,7 @@
                                     </ListView.ItemsPanel>
                                     <i:Interaction.Triggers>
                                         <i:EventTrigger EventName="SelectionChanged">
-                                            <i:InvokeCommandAction Command="{Binding SelectionChangedCommand}" CommandParameter="{Binding ElementName=MyOrderManagementUserControl}" />
+                                            <i:InvokeCommandAction Command="{Binding SelectionChangedCommand}" CommandParameter="{Binding ElementName=weddingDetailWD}" />
                                         </i:EventTrigger>
                                     </i:Interaction.Triggers>
                                     <ListViewItem>
@@ -167,8 +173,9 @@
                                         </ListViewItem.Template>
                                     </ListViewItem>
                                 </ListView>
+                               
                             </Border>
-                            <Grid x:Name="listViewdish">
+                            <Grid Grid.Row="1" x:Name="listViewdish">
                             </Grid>
                         </Grid>
                     </Grid>
