--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -16,4 +16,5 @@
     <viewmodels:InvoiceVM x:Key="invoiceVM"></viewmodels:InvoiceVM>
     <viewmodels:SetWeddingInfoVM x:Key="setWeddingInfoVM"></viewmodels:SetWeddingInfoVM>
     <viewmodels:WeddingDetailVM x:Key="weddingDetailVM"></viewmodels:WeddingDetailVM>
+    <viewmodels:MenuVM x:Key="menuVM"></viewmodels:MenuVM>
 </ResourceDictionary>
